--- a/style.css
+++ b/style.css
@@ -97,19 +97,30 @@ button {
     cursor: pointer;
     margin-top: 10px;
     transition: 0.8s;
-}
+} 
 
 button:hover {
     color: #3882F6;
     background-color: white;
 }
 
+
+
 .header-links, .header-hero, .content {
     color: white;
 }
 
-.header-links:hover {
+li {
+    transition: 0.4s;
+}
+
+li:hover {
     color: #3882F6;
+    
+}
+
+li:active {
+    color: rgb(14, 255, 154)
 }
 
 .members {
@@ -136,10 +147,112 @@ button:hover {
     padding: 0px;
     margin: 0px;
 }
+#ino {
+    width: 220px;
+}
+
+.ino {
+    margin-left: 30px;
+}
 
 .slot {
     text-align: center;
     max-width: 200px;
 }
 
+.quote-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    
+    margin-top: 100px;
+    height: 400px;
+}
 
+.quote {
+   width: 700px;
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: 300px;
+}
+
+.cta-container {
+ 
+    height: 275px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cta {
+    background-color: #3882F6;
+    height: 150px;
+    width: 1000px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left {
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+}
+
+.rButton{
+    background-color: #3882F6;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 40px;
+ color: white;
+    font-size: 18px;
+    cursor: pointer;
+    border: 2px solid white;
+    transition: 0.8s;
+    margin-right: 100px;
+
+}
+
+.cta-text {
+    font-size: 20px;
+    color: white;
+}
+
+.contentLeft {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+.cta-text {
+    color: white;
+}
+
+.su {
+    color: #E5E7EB;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    height: 100px;
+    color: white;
+}
+
+.quote-flex {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.author {
+    font-size: 30px;
+    font-weight: bold;
+    font-style: normal;  
+    margin-left: 485px; 
+}
