--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
  
 }
 
+.content {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
 .logo {
     margin-top: 20px;
     margin-left: 30px;
@@ -166,7 +172,7 @@ li:active {
     align-items: center;
     background-color: #E5E7EB;
     
-    margin-top: 100px;
+    margin-top: 50px;
     height: 400px;
 }
 
