--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@ body {
  
 }
 
+img {
+    transition: 0.2s;
+}
+img:hover {
+    transform: scale(1.05);
+}
+
 .content {
     display: flex;
     flex-direction: column;
